latest update sent to tonya

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
             </div>
           </div>
           <div class="row recent-videos">
-            <div class="col-xs-3 current-video">
+            <div class="col-xs-12 col-sm-6 col-md-3 current-video">
               <iframe width="80%" height="140" src="https://www.youtube.com/embed/ZBb_2TVCQOA"></iframe>
             </div>
-            <div class="col-xs-3 current-video">
+            <div class="col-xs-12 col-sm-6 col-md-3 current-video">
               <iframe width="80%" height="140" src="https://www.youtube.com/embed/jbKcnKnYWcA"></iframe>
             </div>
-            <div class="col-xs-3 current-video">
+            <div class="col-xs-12 col-sm-6 col-md-3 current-video">
               <iframe width="80%" height="140" src="https://www.youtube.com/embed/jlPtw1Ycwjg"></iframe>
             </div>
-            <div class="col-xs-3 current-video">
+            <div class="col-xs-12 col-sm-6 col-md-3 current-video">
               <iframe width="80%" height="140" src="https://www.youtube.com/embed/Uc2mrtPzolw"></iframe>
             </div>
           </div>
